adição do campo bio
